force-app/main/default/objects/LVC_OrderProduct__c/LVC_OrderProduct__c.object-meta.xml
<CustomObject>
    <label>Producto de Pedido</label>
    <nameField>
        <displayFormat>PROD-{0000000000}</displayFormat>
        <label>Producto de Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos de Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>