force-app/main/default/objects/LVC_OrderProduct__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Pedido</label>
    <referenceTo>LVC_Order__c</referenceTo>
    <relationshipLabel>Productos de Pedido</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>