force-app/main/default/objects/LVC_OrderProduct__c/fields/ProductStockDate__c.field-meta.xml
<CustomField>
    <fullName>ProductStockDate__c</fullName>
    <label>Producto en Stock Fecha</label>
    <referenceTo>LVC_ProductStockDate__c</referenceTo>
    <relationshipLabel>Productos de Pedido</relationshipLabel>
    <relationshipName>Product_Stock_Date</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>