force-app/main/default/objects/LVC_OrderProduct__c/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <label>Sku</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>